# ADS

./: .gitmodules  README.md
hw1/: graph.py  test-main.cc
hw1-code/: tabular.py  test-main  test-main.cc
hw2/: graph.py  main.cc
hw3/: main  makefile  rbtree.cpp
hw4/: graph.py
hw6/: fib  fib.cc  graph.py  multipleFib.cc
hw7/: main.cpp
lab-learned-index-handout/compare_py/: datagraph.py
lab-learned-index-handout/compare_test/: linear_100000.csv  random_10000.csv  random_100000.csv
lab-learned-index-handout/include/: decision_model.h  learned_index.h  linear_model.h  tools.h
lab-learned-index-handout/src/: decision_model.cc  learned_index.cc  linear_model.cc
lab-learned-index-handout/test/: compare_test.cc
lab1-learned-index/: .gitignore
lab1-learned-index/compare_py/: data.py
lab1-learned-index/compare_test/: linear_10000.csv
lab1-learned-index/include/: decision_model.h  learned_index.h
lab1-learned-index/src/: decision_model.cc
lab1-learned-index/test/: compare_test.cc  test.h
lab2-lsm-tree/: .gitignore  CMakeLists.txt  customize-test.cc  kvstore.cc  skiplist.cpp
lsm-tree-phase1/: skiplist.cpp  skiplist.h
lsm-tree-phase2/: CMakeLists.txt  kvstore.cc  kvstore.h  skiplist.cpp  sstable.cpp  sstable.h
lsm-tree-phase2/embedding/: embedding.cc  embedding.h
lsm-tree-phase2/test/: E2E_test.cpp
lsm-tree-phase3/: .gitignore  CMakeLists.txt  HNSW.cc  graph.py  kvstore.h  report.cpp  skiplist.h
lsm-tree-phase3/embedding/: embedding.cc
lsm-tree-phase3/test/: E2E_test.cpp
lsm-tree-phase4/: .gitignore  CMakeLists.txt  HNSW.cc  HNSW.h  HNSW_Persistent_Test_Phase1.cpp  Phase4.md  Vector_Persistent_Test_Phase2.cpp  emtable.cpp  emtable.h  kvstore.cc  kvstore.h  skiplist.cpp  sstable.h  sstablehead.h
lsm-tree-phase4/embedding_data/: embedding
lsm-tree-phase5/: .gitignore  CMakeLists.txt  HNSW.cc  HNSW.h  HNSW_Persistent_Test_Phase1_complex.cpp  HNSW_Persistent_Test_Phase2_complex.cpp  emtable.cpp  emtable.h  kvstore.cc  kvstore.h  mapreduce-parallel.cc  readEmbedding.h  report HNSW.cpp  report emtable.cpp  report.cpp  skiplist.cpp  skiplist.h  sstablehead.cpp  sstablehead.h  threadpool.h  tmptest.cpp
lsm-tree-phase5/phase4 tests/: HNSW_Persistent_Test_Phase1_complex.cpp
lsm-tree-phase5/ref/: readfile-parallel.cc  threadpool.cc
proj1-lsm-tree/: .gitignore  CMakeLists.txt
